--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,17 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" rel="stylesheet">
+    
+
+
 </head>
 
 <body>
   <app-root></app-root>
+   <!-- HERE Map -->
+
+ 
 </body>
 
 </html>
